--- a/index.html
+++ b/index.html
@@ -79,16 +79,20 @@
     </div>
 
     <!-- About -->
-    <div id="about" class="container col-xxl-10 px-4 py-5 border-bottom animated fadeInRight">
+    <div id="about" class="container col-xxl-10 px-4 py-4 border-bottom">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6">
           <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid border rounded-3 shadow-lg" alt="trainer" width="750" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
-          <h1 class="display-5 fw-bold lh-1 mb-3">O nás</h1>
-          <p class="lead text-justify">Organizace Element swimming se vznikem v roce 2019 má být i mimo jiné nápomocná k rozvoji českého plaveckého sportu.
-            Pilotním projektem Element swimming je stroj Power system 1.0. Tento stroj se již používá napříč zahraničními kluby, avšak do České republiky došel až nyní s naší iniciativou. 
-            Zařazení již zmiňovaného stroje do tréninkového procesu má sloužit trenérům a jejich svěřencům k nalezení dalších efektivních tréninkových metod, které slouží k rozvoji výkonnosti sportovce.</p>
+          <h1 class="display-5 fw-bold lh-1 py-3">O nás</h1>
+          <p class="lead text-justify"><p class="lead text-justify">Organizace Element swimming byla založena Dominikem Vavrečkou, který jí rovněž vede a udává její směr už od roku 2019.<br><br>
+          Dominik je sportovec tělem i duší a sport je jeho součástí. Byl členem v Klubu plaveckých sportů Ostrava, ve kterém působil po dobu 10 let své závodní kariéry. Změna přišla s nástupem na Masarykovu Univerzitu v Brně. Zde pokračoval ve své plavecké kariéře, a to po celou dobu svého studia. Během 5 let stihl vystudovat bakalářský program „Trenérství“ a navazující magisterský obor „Kondiční trenér“.
+          Během své sportovní kariéry dosáhl Dominik hned několika úspěchů. Je několikanásobný medailista Mistrovství ČR, účastník Mistrovství Evropy a světa.
+          Nyní Dominik působí jako trenér v Pražském Vysokoškolském sportovním centru známé jako Victoria.<br><br>
+
+          Dominika ženou dopředu poznatky ze své sportovní i trenérské kariéry. Chce je předávat dál a pomáhat tak v rozvíjení potenciálu jeho svěřenců. Právě díky všem těmto podnětům a zkušenostem vznikl jedinečný projekt Element swimming.
+          </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           </div>
         </div>
@@ -112,12 +116,12 @@
 
     <!-- Services -->
     <div id="services" class="container col-xxl-10 px-4 py-5 border-bottom">
-      <h1 class="display-4 py-3 fw-bold text-center">Služby</h1>
+      <h1 class="display-5 py-3 fw-bold text-center">Služby</h1>
       <div class="col-xxl-12 mx-auto">
         <p class="lead mb-4 text-justify">
           Individuální lekce probíhají s certifikovanými trenéry <i>ČSPS (Český svaz plaveckých sportů)</i>. Každý náš trenér absolvoval dlouhodobou plaveckou přípravu. Právě díky ní, může své poznatky předávat dál naším klientům. 
-          To dělá z trenérů Element swimming špičky ve svém oboru. Jsme organizace, která Vám jako jedna z mála nabízí plavecké služby napříč celou republikou. A to konkrétně v Praze, Brně, Ostravě a Olomouci. 
-          Z našich služeb můžete rovněž využít i tzv. Online coaching.
+          To dělá z trenérů Element swimming špičky ve svém oboru. Jsme organizace, která Vám jako jedna z mála nabízí plavecké služby napříč celou republikou. A to konkrétně v <span class="fw-bold">Praze, Brně, Ostravě</span> a <span class="fw-bold">Olomouci</span>. 
+          Z našich služeb můžete rovněž využít i tzv. <span class="fw-bold">Online coaching</span>.
           </p>
       </div>
   
@@ -165,7 +169,7 @@
         </div>
 
         <div class="col">
-          <button class="btn-no-style">
+          <button class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OlomoucModal">
           <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/olomouc.webp');">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Olomouc</h2>
@@ -179,7 +183,7 @@
         </div>
 
         <div class="col">
-          <button class="btn-no-style">
+          <button class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OnlineModal">
           <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/online.webp');">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Online</h2>
@@ -221,28 +225,43 @@
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">Kontakt</h1>
           <p class="lead text-justify">
-            Máš zájem o první lekci, chceš zarezervovat termín se svým trenérem a nebo chceš řešit něco jiného?
+            Máte zájem o první lekci, chcete si zarezervovat termín se svým trenérem a nebo řešit něco jiného?
             <br>
             <br>
             Není problém, stačí se nám ozvat na kontakty viz níže:
             <br>
             <br>
             <div class="contact-row">
-              <h4><a href="tel:+420 725 956 042" class="text-color-es">
-                <img src="static/images/icons/mobile-alt-solid.svg" alt="phone" width="36" height="36">
-              <p>+420 725 956 042</p>
-            </a></h4>
+              <h4 class="mb-2"><a href="mailto:elementswimming@gmail.com" class="text-color-es d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" color="black" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                  <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+                </svg>
+                <p class="m-0 px-3">elementswimming@gmail.com</p>
+              </a></h4>
             </div>
             <div class="contact-row ">
-              <h4><a href="https://www.instagram.com/elementswimming_cz" class="text-color-es">
-                <img src="static/images/icons/instagram-brands.svg" alt="instagram" width="36" height="36">
-                <p>elementswimming_cz</p>
+              <h4 class="mb-2"><a href="https://www.instagram.com/elementswimming_cz" class="text-color-es d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" color="black" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                  <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+                </svg>
+                <p class="m-0 px-3">elementswimming_cz</p>
               </a></h4>
               </div>
+            <div class="contact-row">
+              <h4 class="mb-2"><a href="tel:+420 725 956 042" class="text-color-es d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" color="black" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16">
+                  <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
+                  <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                </svg>
+              <p class="m-0 px-3">+420 725 956 042</p>
+            </a></h4>
+            </div>
               <div class="contact-row">
-                <h4><a href="mailto:elementswimming@gmail.com" class="text-color-es">
-                  <img src="static/images/icons/envelope-regular.svg" alt="mail" width="36" height="36">
-                  <p>elementswimming@gmail.com</p>
+                <h4 class="mb-2"><a href="https://www.linkedin.com/in/dominik-vavrečka-1a272a145/" class="text-color-es d-flex align-items-center">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" color="black" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+                  </svg>
+                  <p class="m-0 px-3">LinkedIn</p>
                 </a></h4>
                 </div>
           </p>
@@ -485,6 +504,111 @@
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="d-flex align-items-center me-3">
                       <small>Plavecké lekce pro 5 a více osob.</small>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            </div>
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <div class="modal fade" id="OlomoucModal" tabindex="-1" aria-labelledby="OlomoucModal" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content px-2">
+          <div class="modal-header text-center">
+            <h2 class="modal-title text-muted wh-100">Olomouc - ceník a služby</h2>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="row row-cols-1 align-items-stretch pb-3">
+            <div class="col">
+              <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
+                <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
+                  <div class="d-flex justify-content-between flex-wrap align-items-center">
+                  <h2 class="mb-3 display-6 lh-1 fw-bold pr-2">Program 1.1</h2>
+                  <h2 class="mb-3 lh-1 fw-bold">600,- Kč/hod</h2>
+                </div>
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="d-flex align-items-center me-3">
+                      <small>Lekce plavání, kdy se trenér věnuje pouze Vám.</small>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
+                <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
+                  <div class="d-flex justify-content-between flex-wrap align-items-center">
+                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.2</h2>
+                  <h2 class="mb-4 lh-1 fw-bold">700,- Kč/hod</h2>
+                </div>
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="d-flex align-items-center me-3">
+                      <small>Lekce plavání, kdy se trenér věnuje nanejvýš 2 osobám.</small>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
+                <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
+                  <div class="d-flex justify-content-between flex-wrap align-items-center">
+                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.3</h2>
+                  <h2 class="mb-4 lh-1 fw-bold">750,- Kč/hod</h2>
+                </div>
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="d-flex align-items-center me-3">
+                      <small>Plavecké lekce pro 3 - 4 osoby.</small>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
+                <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
+                  <div class="d-flex justify-content-between flex-wrap align-items-center">
+                  <h2 class="mb-4 display-6 lh-1 fw-bold">Program 1.5</h2>
+                  <h2 class="mb-4 lh-1 fw-bold">1000,- Kč/hod</h2>
+                </div>
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="d-flex align-items-center me-3">
+                      <small>Plavecké lekce pro 5 a více osob.</small>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            </div>
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <div class="modal fade" id="OnlineModal" tabindex="-1" aria-labelledby="OnlineModal" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content px-2">
+          <div class="modal-header text-center">
+            <h2 class="modal-title text-muted wh-100">Online - ceník a služby</h2>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="row row-cols-1 align-items-stretch pb-3">
+            <div class="col">
+              <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
+                <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
+                  <div class="d-flex justify-content-between flex-wrap align-items-center">
+                  <h2 class="mb-3 display-6 lh-1 fw-bold pr-2">Konzultace</h2>
+                  <h2 class="mb-3 lh-1 fw-bold">Od 800,- Kč/hod</h2>
+                </div>
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="d-flex align-items-center me-3">
+                      <small>V případě zájmu o další služby, cena dohodou</small>
                     </li>
                   </ul>
                 </div>
