New photo + minor optimizations

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <!-- About -->
     <div id="about" class="container col-xxl-10 px-4 py-4 border-bottom">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid border rounded-3 shadow-lg" alt="trainer" width="750" height="500" loading="lazy">
+        <div class="col-10 col-sm-8 col-lg-6 pxh-5 pyh-5">
+          <img src="static/images/IMG_5076.jpg" class="d-block mx-lg-auto img-fluid border rounded-3 shadow-lg" alt="trainer" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 py-3">O nás</h1>
@@ -102,13 +102,13 @@
     <!-- Cooperation -->
     <div class="container col-xxl-10 px-4 border-bottom" id="cooperation">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 py-5 align-items-center fill justify-content-center">
-        <div class="col d-flex align-items-start cooperation-logo">
+        <div class="col d-flex align-items-start cooperation-logo justify-content-center py-3">
           <img src="static/images/kpsos.webp" alt="kpsos" class="bi me-2" width="200"/>
         </div>
-        <div class="col d-flex align-items-start cooperation-logo">
+        <div class="col d-flex align-items-start cooperation-logo justify-content-center py-3">
           <img src="static/images/victoria.webp" alt="victoria" class="bi me-2" width="200"/>
         </div>
-        <div class="col d-flex align-items-start cooperation-logo">
+        <div class="col d-flex align-items-start cooperation-logo justify-content-center py-3">
           <img src="static/images/csps.webp" alt="csps" class="bi me-2" width="200"/>
         </div>
       </div>
@@ -273,14 +273,14 @@
 
     <!-- Footer -->
     <div class="container">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
         <p class="col-md-4 mb-0 text-muted">&copy; 2021 Element swimming | <a class="light-gray no-decoration" href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a></p>
     
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
           <img src="static/images/basic_logo.webp" alt="es-logo" class="bi me-2" width="54" height="36"/>
         </a>
     
-        <ul class="nav col-md-4 justify-content-end">
+        <ul class="nav col-md-4 footer-nav">
           <li class="nav-item"><a href="#home" class="nav-link px-2 text-muted">Domů</a></li>
           <li class="nav-item"><a href="#about" class="nav-link px-2 text-muted">O nás</a></li>
           <li class="nav-item"><a href="#services" class="nav-link px-2 text-muted">Služby</a></li>
