--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
     <!-- Cooperation -->
     <div class="container col-xxl-10 px-4 border-bottom" id="cooperation">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 py-5 align-items-center fill justify-content-center">
-        <div class="col d-flex align-items-start cooperation-logo justify-content-center py-3">
+        <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.kpsostrava.cz">
           <img src="static/images/kpsos.webp" alt="kpsos" class="bi me-2" width="200"/>
-        </div>
-        <div class="col d-flex align-items-start cooperation-logo justify-content-center py-3">
+        </a>
+        <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.vsc.cz">
           <img src="static/images/victoria.webp" alt="victoria" class="bi me-2" width="200"/>
-        </div>
-        <div class="col d-flex align-items-start cooperation-logo justify-content-center py-3">
+        </a>
+        <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.czechswimming.cz">
           <img src="static/images/csps.webp" alt="csps" class="bi me-2" width="200"/>
-        </div>
+        </a>
       </div>
     </div>
 
