Hide CSPS logo, A. Popelka credits link

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.vsc.cz">
           <img src="static/images/victoria.webp" alt="victoria" class="bi me-2" width="200"/>
         </a>
-        <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.czechswimming.cz">
+        <!-- <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.czechswimming.cz">
           <img src="static/images/csps.webp" alt="csps" class="bi me-2" width="200"/>
-        </a>
+        </a> -->
       </div>
     </div>
 
@@ -653,7 +653,7 @@ if ($('.smart-scroll').length > 0) { // check if element exists
   Services photos: 
     Prague - Photo by JESHOOTS.com from Pexels
     Brno - https://pixabay.com/images/id-4902615/
-    Ostrava - Adam Popelka
+    Ostrava - Adam Popelka (https://www.facebook.com/lovecokamziku/)
     Olomouc - https://pixabay.com/images/id-4229272/
     Online - Photo by Pixabay from Pexels
   
