--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a href="#contact"><button type="button" class="btn bg-green btn-lg px-4 text-white">1. trénink zdarma</button></a>
           </div>
         </div>
-        <div class="col-lg-7 p-0">
+        <div class="col-lg-7 p-0 d-flex justify-content-center">
           <img src="static/images/home_photo.webp" class="img-fluid rounded-3 mb-4" alt="team" height="700" loading="lazy">
         </div>
       </div>
@@ -81,8 +81,8 @@
     <!-- About -->
     <div id="about" class="container col-xxl-10 px-4 py-4 border-bottom">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid border rounded-3 shadow-lg" alt="trainer" loading="lazy">
+        <div class="col-10 col-sm-8 col-lg-6 d-flex justify-content-center">
+          <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-3 shadow-lg" alt="trainer" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 py-3">O nás</h1>
@@ -218,7 +218,7 @@
     <!-- Contact -->
     <div id="contact" class="container col-xxl-10 px-4 py-4">
       <div class="row flex-lg-row align-items-center g-5 justify-content-center">
-        <div class="col-10 col-sm-8 col-lg-6 p-5">
+        <div class="col-10 col-sm-8 col-lg-6 p-5 d-flex justify-content-center">
           <img src="static/images/contact_logo.webp" class="d-block mx-lg-auto img-fluid" alt="es_logo" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
@@ -275,7 +275,7 @@
       <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
         <p class="col-md-4 mb-0 text-muted">&copy; 2021 Element swimming | <a class="light-gray no-decoration" href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a></p>
     
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center my-3 mb-md-0 me-md-auto link-dark text-decoration-none">
           <img src="static/images/basic_logo.webp" alt="es-logo" class="bi me-2" width="54" height="36"/>
         </a>
     
