Responsivity final touches

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h3 class="fw-bold">Do bazénu? Jedině s námi!</h3>
           <h1 class="display-4 fw-bold lh-1 py-3">Plavecký trénink 21. století</h1>
           <p class="lead">Moderní pojetí tréninkového procesu, podložené aktuálními trendy a pod dohledem vysokoškolsky vzdělaných profesionálu v daném oboru</p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center">
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
             <a href="#contact"><button type="button" class="btn bg-color-es btn-lg px-4 me-sm-3 text-white">Rezervovat trénink</button></a>
             <a href="#contact"><button type="button" class="btn bg-green btn-lg px-4 text-white">1. trénink zdarma</button></a>
           </div>
