images alt names

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container smart-scroll header-container">
       <header class="d-flex flex-wrap justify-content-center py-3 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-          <img src="static/images/basic_logo.webp" alt="es-logo" class="bi me-2" width="54" height="36"/>
+          <img src="static/images/basic_logo.webp" alt="Logo Element Swimming - Menu" class="bi me-2" width="54" height="36"/>
           <span class="fs-4">Element swimming</span>
         </a>
   
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="col-lg-7 p-0 d-flex justify-content-center">
-          <img src="static/images/home_photo.webp" class="img-fluid rounded-3 mb-4" alt="team" height="700" loading="lazy">
+          <img src="static/images/home_photo.webp" class="img-fluid rounded-3 mb-4" alt="Úvodní foto" height="700" loading="lazy">
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
     <div id="about" class="container col-xxl-10 px-4 py-4 border-bottom">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6 d-flex justify-content-center">
-          <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-3 shadow-lg" alt="trainer" loading="lazy">
+          <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-3 shadow-lg" alt="Trenér plavání Dominik Vavrečka" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 py-3">O nás</h1>
@@ -103,10 +103,10 @@
     <div class="container col-xxl-10 px-4 border-bottom" id="cooperation">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 py-5 align-items-center fill justify-content-center">
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.kpsostrava.cz">
-          <img src="static/images/kpsos.webp" alt="kpsos" class="bi me-2" width="200"/>
+          <img src="static/images/kpsos.webp" alt="Klub Plaveckých Sportů Ostrava, KPSOS - Logo" class="bi me-2" width="200"/>
         </a>
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.vsc.cz">
-          <img src="static/images/victoria.webp" alt="victoria" class="bi me-2" width="200"/>
+          <img src="static/images/victoria.webp" alt="Vysokoškolské sportovní centrum Ministerstva školství, mládeže a tělovýchovy, Victoria - Logo" class="bi me-2" width="200"/>
         </a>
         <!-- <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.czechswimming.cz">
           <img src="static/images/csps.webp" alt="csps" class="bi me-2" width="200"/>
@@ -219,7 +219,7 @@
     <div id="contact" class="container col-xxl-10 px-4 py-4">
       <div class="row flex-lg-row align-items-center g-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6 p-5 d-flex justify-content-center">
-          <img src="static/images/contact_logo.webp" class="d-block mx-lg-auto img-fluid" alt="es_logo" width="700" height="500" loading="lazy">
+          <img src="static/images/contact_logo.webp" class="d-block mx-lg-auto img-fluid" alt="Logo Element Swimming velké" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">Kontakt</h1>
@@ -276,7 +276,7 @@
         <p class="col-md-4 mb-0 text-muted">&copy; 2021 Element swimming | <a class="light-gray no-decoration" href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a></p>
     
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center my-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-          <img src="static/images/basic_logo.webp" alt="es-logo" class="bi me-2" width="54" height="36"/>
+          <img src="static/images/basic_logo.webp" alt="Logo Element Swimming - záhlaví" class="bi me-2" width="54" height="36"/>
         </a>
     
         <ul class="nav col-md-4 footer-nav">
