--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
     <meta name="description" content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava a Olomouc (možnost využít také Online coaching)." />
-    <title>Trenér plavání Praha, Brno, Ostrava, Olomouc, Online | Element swimming</title>
+    <title>Trenér plavání Praha, Brno, Ostrava, Olomouc a Online</title>
     <link rel="icon"href="static/images/logo_icon.png">
     <link rel="apple-touch-icon" href="static/images/apple-touch-icon-144x144.png">
     <!-- Bootstrap core CSS -->
