--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <meta name="description" content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava a Olomouc (možnost využít také Online coaching)." />
+    <meta name="description" content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava a Olomouc (možnost využít také Online coaching).">
     <title>Trenér plavání Praha, Brno, Ostrava, Olomouc a Online</title>
     <link rel="icon"href="static/images/logo_icon.png">
     <link rel="apple-touch-icon" href="static/images/apple-touch-icon-144x144.png">
@@ -59,7 +59,7 @@
     <div id="home" class="container my-5 pt-8">
       <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
         <div class="col-lg-5 p-3 p-lg-5 pt-lg-3 justify-content-center">
-          <h3 class="fw-bold">Do bazénu? Jedině s námi!</h3>
+          <p class="pre-title fw-bold">Do bazénu? Jedině s námi!<p>
           <h1 class="display-4 fw-bold lh-1 py-3">Plavecký trénink 21. století</h1>
           <p class="lead">Moderní pojetí tréninkového procesu, podložené aktuálními trendy a pod dohledem vysokoškolsky vzdělaných profesionálu v daném oboru</p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
@@ -75,7 +75,7 @@
 
     <!-- Home footer -->
     <div class="container d-flex col-xxl-10 px-4 py-5 border-top border-bottom justify-content-center">
-      <h3 class="col-9 display-5 fw-bold text-center text-secondary">Našim cílem je <blue>Vás naučit efektivně plavat všechny plavecké způsoby</blue> s minimálním výdejem energie</h3>
+      <p class="col-9 display-5 fw-bold text-center text-secondary">Našim cílem je <blue>Vás naučit efektivně plavat všechny plavecké způsoby</blue> s minimálním výdejem energie</p>
     </div>
 
     <!-- About -->
