--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <meta name="description" content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava a Olomouc (možnost využít také Online coaching).">
+    <meta name="description" content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc nebo Online">
     <title>Trenér plavání Praha, Brno, Ostrava, Olomouc a Online</title>
     <link rel="icon"href="static/images/logo_icon.png">
+    <link rel="canonical" href="https://www.elementswimming.cz/index.html" />
     <link rel="apple-touch-icon" href="static/images/apple-touch-icon-144x144.png">
     <!-- Bootstrap core CSS -->
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -68,7 +69,7 @@
           </div>
         </div>
         <div class="col-lg-7 p-0 d-flex justify-content-center">
-          <img src="static/images/home_photo.webp" class="img-fluid rounded-3 mb-4" title="" title="Dominik Vavrečka a tým Victoria Praha" alt="Tomáš Ludvík, Sebastian Luňák, Dominik Vavrečka, Tomáš Franta, Ondřej Smrček - Victoria Praha" height="700" loading="lazy">
+          <img src="static/images/home_photo.webp" class="img-fluid rounded-3 mb-4" title="Dominik Vavrečka a tým Victoria Praha" alt="Tomáš Ludvík, Sebastian Luňák, Dominik Vavrečka, Tomáš Franta, Ondřej Smrček - Victoria Praha" height="700" loading="lazy">
         </div>
       </div>
     </div>
