sportgym_ostrava.webp logo

--- a/index.html
+++ b/index.html
@@ -102,12 +102,15 @@
 
     <!-- Cooperation -->
     <div class="container col-xxl-10 px-4 border-bottom" id="cooperation">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 py-5 align-items-center fill justify-content-center">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 py-3 align-items-center fill justify-content-center">
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.kpsostrava.cz">
           <img src="static/images/kpsos.webp" title="Klub Plaveckých Sportů Ostrava, KPSOS" alt="Klub Plaveckých Sportů Ostrava, KPSOS - Logo" class="bi me-2" width="200"/>
         </a>
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.vsc.cz">
           <img src="static/images/victoria.webp" title="Vysokoškolské sportovní centrum Ministerstva školství, mládeže a tělovýchovy, Victoria" alt="Vysokoškolské sportovní centrum Ministerstva školství, mládeže a tělovýchovy, Victoria - Logo" class="bi me-2" width="200"/>
+        </a>
+        <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.sportgym-ostrava.cz">
+          <img src="static/images/sportgym_ostrava.webp" title="Sportovní gymnázium Dany a Emila Zátopkových Ostrava" alt="Sportovní gymnázium Dany a Emila Zátopkových Ostrava - Logo" class="bi me-2" width="200"/>
         </a>
         <!-- <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.czechswimming.cz">
           <img src="static/images/csps.webp" alt="csps" class="bi me-2" width="200"/>
