--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="col-lg-7 p-0 d-flex justify-content-center">
-          <img src="static/images/home_photo.webp" class="img-fluid rounded-3 mb-4" title="Dominik Vavrečka a tým Victoria Praha" alt="Tomáš Ludvík, Sebastian Luňák, Dominik Vavrečka, Tomáš Franta, Ondřej Smrček - Victoria Praha" height="700" loading="lazy">
+          <img src="static/images/home_photo.webp" class="img-fluid rounded-3 mb-4 section-image" title="Dominik Vavrečka a tým Victoria Praha" alt="Tomáš Ludvík, Sebastian Luňák, Dominik Vavrečka, Tomáš Franta, Ondřej Smrček - Victoria Praha" loading="lazy">
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
     <div id="about" class="container col-xxl-10 px-4 py-4 border-bottom">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6 d-flex justify-content-center">
-          <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-3 shadow-lg" title="Trenér plavání Dominik Vavrečka" alt="Trenér plavání Dominik Vavrečka" loading="lazy">
+          <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-3 shadow-lg section-image" title="Trenér plavání Dominik Vavrečka" alt="Trenér plavání Dominik Vavrečka" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 py-3">O nás</h1>
@@ -223,7 +223,7 @@
     <div id="contact" class="container col-xxl-10 px-4 py-4">
       <div class="row flex-lg-row align-items-center g-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6 p-5 d-flex justify-content-center">
-          <img src="static/images/contact_logo.webp" class="d-block mx-lg-auto img-fluid" title="Element Swimming" alt="Logo Element Swimming velké" width="700" height="500" loading="lazy">
+          <img src="static/images/contact_logo.webp" class="d-block mx-lg-auto img-fluid section-image" title="Element Swimming" alt="Logo Element Swimming velké" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">Kontakt</h1>
